7:30 pm good work done back-end is working hard w/ routes nearly done front-end is integrating everything ;)
Co-authored-by: Berke Altiparmak <BerkeAltiparmak@users.noreply.github.com>
Co-authored-by: Arihan10 <Arihan10@users.noreply.github.com>
Co-authored-by: Krishnan Shankar <krishnans2006@gmail.com>

--- a/frontend/front-app/src/Components/Profile.css
+++ b/frontend/front-app/src/Components/Profile.css
@@ -19,13 +19,25 @@
     color: black;
 }
 
+.knowBtn:hover {
+    background-color: whitesmoke;
+}
+
 .usedToBtn {
     background-color: greenyellow;
     color: black;
 }
 
+.usedToBtn:hover {
+    background-color: rgb(195, 255, 106);
+}
+
 .dontBtn {
     background-color: red;
+}
+
+.dontBtn:hover {
+    background-color: rgb(255, 119, 119);
 }
 
 .buttonContainer {
@@ -40,6 +52,6 @@
     align-self: center;
     background-color: #3E4377;
     width: 20em;
-    margin-top: 1em;
+    margin-top: 2em;
     text-align: center;
 }
