--- a/frontend/front-app/src/Components/message.css
+++ b/frontend/front-app/src/Components/message.css
@@ -6,6 +6,10 @@
     margin-right: 1em;
     margin-top: 0.5em;
     border-radius: 0.5em;
+    padding-left: 1em; 
+    padding-right: 1em;
+    border-radius: 7px;
+    border: 2px solid black;
 }
 .notYou{
     height: fit-content;
@@ -13,5 +17,9 @@
     background-color: #4863ff;
     margin-top: 0.5em;
     margin-left: 1em;
-    border-radius: 0.5em;
+    padding-left: 1em; 
+    padding-right: 1em;
+    border-radius: 7px;
+    border: 2px solid black;
+    color: white; 
 }
